# jwt-compact

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: alg.rs  error.rs  lib.rs
src/alg/: k256.rs  p256.rs  rsa.rs
tests/: algorithms.rs
