[package]
name = "jwt-compact-preview"
version = "0.3.8"
authors = [
  "Alex Ostrovski <ostrovski.alex@gmail.com>",
  "Akhil Velagapudi <akhilvelagapudi@gmail.com>",
  "Frank Denis <github@pureftpd.org>",
]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
keywords = ["JWT", "token", "authorization"]
categories = ["web-programming", "cryptography"]
description = "Minimalistic JWT implementation with focus on type safety and secure cryptographic primitives"
repository = "https://github.com/jedisct1/jwt-compact"

# Enable `ES256K` algorithm in documentation on `docs.rs`.
[package.metadata.docs.rs]
features = ["secp256k1"]

[dependencies]
# Public dependencies (present in the public API).
anyhow = "1.0.32"
base64 = "0.12.3"
rand = "0.7.3"
rand_core = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
serde_json = "1.0"

# Crypto backends (all public dependencies).
hmac = "0.9.0"
sha2 = "0.9.1"
ed25519-dalek = { version = "1.0.0", optional = true }
secp256k1 = { version = "0.17.2", features = ["rand"], optional = true }

# Private dependencies (not exposed in the public API).
smallvec = "1.4.2"
thiserror = "1.0.20"
zeroize = { version = "1.1", features = ["zeroize_derive"] }

chrono = "0.4.10"

# `exonum-crypto` backend (public dependency).
[dependencies.exonum-crypto]
version = "1.0.0"
default-features = false
features = ["sodiumoxide-crypto"]
optional = true

[dependencies.ed25519-compact]
version = "0.1.6"
optional = true

[dependencies.p256]
version = "0.4"
optional = true
features = ["ecdsa", "ecdsa-core", "std"]

[dependencies.k256]
version = "0.4"
optional = true
features = ["ecdsa", "ecdsa-core", "std"]

[dependencies.rsa]
version = "0.3"
optional = true

[dev-dependencies]
assert_matches = "1.3"
hex = "0.4.2"
hex-buffer-serde = "0.2.1"

[features]
default = ["ed25519-compact", "rsa", "p256", "k256"]
